# cloudflare-worker-docx-to-pdf-wasm

./: .gitignore  DEPLOY.md  README.md  package.json  pnpm-lock.yaml
approach-a-custom/converter/src/: lib.rs
approach-b-typst/: RESULTS.md  native-wrapper.sh
approach-b-typst/converter/src/: lib.rs  main.rs
approach-c-rdocx/: PLAN.md  RESULTS.md  wasm-runner.mjs
approach-c-rdocx-optimized/: PLAN.md  RESULTS.md
approach-c-rdocx-optimized/opt-1-trim-fonts/: PLAN.md  RESULTS.md
approach-c-rdocx-optimized/opt-2-r2-fonts/: PLAN.md  RESULTS.md  wasm-runner.mjs
approach-c-rdocx-optimized/opt-2-r2-fonts/converter/: Cargo.toml
approach-c-rdocx-optimized/opt-2-r2-fonts/converter/src/: bin.rs  lib.rs
approach-c-rdocx-optimized/opt-2-r2-fonts/worker/: wrangler.toml
approach-c-rdocx-optimized/opt-3-font-subsetting/: PLAN.md
approach-c-rdocx-optimized/opt-3-font-subsetting/worker/: package-lock.json  wrangler.toml
approach-c-rdocx-optimized/opt-4-code-stripping/: RESULTS.md
approach-c-rdocx-optimized/opt-4-code-stripping/converter/: Cargo.toml
approach-c-rdocx-optimized/opt-4-code-stripping/converter/patches/rdocx/: .cargo_vcs_info.json
approach-c-rdocx-optimized/opt-4-code-stripping/converter/patches/rdocx-layout/: .cargo_vcs_info.json
approach-c-rdocx-optimized/opt-4-code-stripping/converter/patches/rdocx-opc/: Cargo.toml
approach-c-rdocx-optimized/opt-4-code-stripping/converter/patches/rdocx-oxml/: .cargo_vcs_info.json
approach-c-rdocx-optimized/opt-4-code-stripping/converter/patches/rdocx-pdf/: .cargo_vcs_info.json  Cargo.toml
approach-c-rdocx-optimized/opt-4-code-stripping/converter/src/: lib.rs
approach-c-rdocx-optimized/opt-4-code-stripping/worker/: node_modules
approach-c-rdocx-optimized/opt-5-complex-corpus/: RESULTS.md  wasm-runner.mjs
approach-c-rdocx-optimized/opt-5-complex-corpus/worker/: package-lock.json  wrangler.toml
approach-c-rdocx-optimized/opt-6-subset-liberation/: wasm-runner.mjs
approach-c-rdocx-optimized/opt-6-subset-liberation/converter/: build.rs
approach-c-rdocx-optimized/opt-6-subset-liberation/worker/: package-lock.json
approach-c-rdocx-optimized/opt-7-textbox-preprocessor/: INVESTIGATION.md  RESULTS.md  WORKAROUND.md
approach-c-rdocx-optimized/opt-7-textbox-preprocessor/converter/: Cargo.toml
approach-c-rdocx-optimized/opt-7-textbox-preprocessor/converter/src/: lib.rs
approach-c-rdocx-optimized/opt-8-textbox-preprocessor-subset/: PLAN.md  RESULTS.md  wasm-runner.mjs
approach-c-rdocx/converter/: Cargo.toml
approach-c-rdocx/converter/src/: bin.rs  lib.rs
complex-fixtures/: RESULTS.md  cdc_hepatitis_eval.docx  cdc_ngs_validation.docx  edu_mtu_thesis.docx  edu_uiowa_thesis.docx  nist_manipulation.docx  nist_ucd_report.docx  un_humansec_proposal.docx
examples/cloudflare-worker/: README.md  package.json  wrangler.toml
examples/rust-worker/: Cargo.toml  FEASIBILITY.md  README.md  RESULTS.md  package.json  wrangler.toml
examples/rust-worker/src/: lib.rs
fixtures/complex/: edu_latech_thesis.docx  nasa_report_bianco.docx  un_seea_policy_brief.docx  un_t15_project.docx  un_ungegn_strategic.docx
foundissues/: 001-rdocx-pdf-carlito-tounicode-cmap.md  003-rdocx-deep-nested-tables-fail.md  004-rdocx-footnote-body-text-not-rendered.md  005-rdocx-track-changes-not-rendered.md  006-rdocx-opc-zip-features-break-wasm.md  007-caladea-suspected-cmap-bug.md  README.md
harness/: rdocx-native-wrapper.sh  wasm-size.sh
research/: PLAN.md  README.md  TEST_PLAN.md
research/01-approaches/: README.md
research/01-approaches/approach-a-custom/converter/: Cargo.toml
research/01-approaches/approach-b-typst/converter/: Cargo.toml
research/02-optimizations/: README.md
research/02-optimizations/opt-3-font-subsetting/converter/: Cargo.toml  build.rs
research/02-optimizations/opt-3-font-subsetting/converter/src/: lib.rs
research/02-optimizations/opt-4-code-stripping/converter/patches/rdocx/: Cargo.toml
research/02-optimizations/opt-4-code-stripping/converter/patches/rdocx-layout/: Cargo.toml
research/02-optimizations/opt-4-code-stripping/converter/patches/rdocx-oxml/: Cargo.toml
research/02-optimizations/opt-4-code-stripping/converter/patches/rdocx-oxml/src/: placeholder.rs
research/02-optimizations/opt-4-code-stripping/converter/patches/rdocx/src/: document.rs
research/02-optimizations/opt-5-complex-corpus/converter/: Cargo.toml
research/02-optimizations/opt-5-complex-corpus/converter/src/: bin.rs  lib.rs
research/02-optimizations/opt-8-textbox-preprocessor-subset/converter/: Cargo.toml
research/02-optimizations/opt-8-textbox-preprocessor-subset/converter/src/: preprocess.rs
research/03-real-world-testing/: COMPARISON.md  README.md
research/04-found-issues/: 002-rdocx-textbox-content-not-extracted.md  README.md
research/05-benchmarks/: BENCHMARKS.md  MEMORY.md  README.md  js-worker-bench.json  rust-worker-bench.json  single-doc-memory.txt
research/06-security-audit/: README.md  SECURITY-AUDIT-FIXES.md
research/harness/: bench.mjs  score.py  score_complex.py  single-doc-memory.mjs
research/results/: comparison.md
results/approach-a-complex/: results.json
results/approach-a-custom/: summary.md
results/approach-b/: results.json
results/approach-c-baseline-native-complex/: summary.md
results/office2pdf-native/: results.json  summary.md
results/opt-1-trim-fonts/: summary.md
results/opt-2-r2-fonts/: results.json
results/opt-3-complex/: results.json
results/opt-3-font-subsetting/: results.json  summary.md
results/opt-4-code-stripping/: results.json
results/opt-5-complex-corpus/: results.json
results/opt-5-complex-corpus-toy/: results.json
results/opt-6-subset-liberation-complex/: summary.md
results/opt-6-subset-liberation-toy/: results.json  summary.md
results/opt-7-textbox-preprocessor/: results.json  summary.md
results/opt-8/: results.json  summary.md
results/opt-8-toy/: results.json  summary.md
results/rdocx-native/: results.json
results/rdocx-wasm/: summary.md
worker/: README.md  wrangler.toml
worker/src/: converter.opt.wasm
(+94 files in other folders)
