[package]
name = "approach_c_rdocx_opt8"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "approach_c_rdocx_opt8"
path = "src/bin.rs"
required-features = ["native"]

[dependencies]
rdocx = "0.1.2"
rdocx-layout = { version = "0.1.2" }
# Textbox preprocessor: pre-walks the DOCX zip + XML to lift <w:txbxContent>
# paragraphs into <w:body> so rdocx-oxml can see them.
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
quick-xml = "0.37"

[patch.crates-io]
rdocx-opc = { path = "patches/rdocx-opc" }

[features]
default = ["native"]
native = []

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "unwind"
strip = true
